--- a/_config.yml
+++ b/_config.yml
@@ -30,13 +30,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-subtitle: Your awesome subtitle
+title: 赵鸿浩
+subtitle: 热爱生活热爱你
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
-author: Your Incredible Name
-email: your-email@example.com
+author: Leon Zhao
+email: zhaohonghao07@live.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
